--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>knowledge of coding and web development.</h2>
         
             <button id="startbtn">Test My knowledge</button>
-            <button id="pageScore" onclick="showScore()">High Scores</button>
+            <button id="pageScore" onclick="showHighscore()">High Scores</button>
         </div>
 
         <!-- Buttons for answer choices adding a time limit to choose one of the choices -->
@@ -35,7 +35,7 @@
 
         <div id="gameover">
 
-            <div id="endScore"></div>
+            <div id="finalScore"></div>
             <input type="text" size = "40" placeholder="Enter your initials for high score" name="intials" id="initials"/>
             <button id="submitScore">Submit Score</button>
         </div>
@@ -51,7 +51,7 @@
 
         <!-- Allows user to play again and clear any scores from previous attempts -->
 
-        <div id="gameOverBtns">
+        <div id="endGameBtns">
             <button id="playAgain" onclick="replayQuiz()">Play Again</button>
             <button id="clearHighscore" onclick="clearScore()">Clear Highscores</button>
         </div>
