clean up quiz-index.js and laid down starting code for the results page

--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
 
         <!-- Allows user to play again and clear any scores from previous attempts -->
 
-        <div id="endGameBtns">
+        <!-- <div id="endGameBtns">
             <button id="playAgain" onclick="replayQuiz()">Play Again</button>
             <button id="clearHighscore" onclick="clearScore()">Clear Highscores</button>
-        </div>
+        </div> -->
+        
     </div>
     </div>
-    <script src="./js/script.js"></script>
+    <script src="./js/questions.js"></script>
+    <script src="./js/quiz-index.js"></script>
 </body>
 </html>
