--- a/highscores.html
+++ b/highscores.html
@@ -16,6 +16,6 @@
         <a href="./index.html"><button>Back</button></a>
 
     </div>
-    <script src="./js/results.js"></script>
+    <script src="./js/results.jsg"></script>
 </body>
 </html>
