--- a/highscores.html
+++ b/highscores.html
@@ -14,6 +14,7 @@
         <ol id="highscores"></ol>
 
         <a href="./index.html"><button>Back</button></a>
+        <button id="clear">Clear Scores</button>
 
     </div>
     <script src="./js/results.jsg"></script>
