--- a/highscores.html
+++ b/highscores.html
@@ -17,6 +17,6 @@
         <button id="clear">Clear Scores</button>
 
     </div>
-    <script src="./js/results.jsg"></script>
+    <script src="./js/results.js"></script>
 </body>
 </html>
