--- a/highscores.html
+++ b/highscores.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HighScores</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Highscores</title>
 
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+  </head>
+
+  <body>
     <div class="wrapper">
-        <h1>HighScores</h1>
-        <ol id="highscores"></ol>
+      <h1>Highscores</h1>
+      <ol id="highscores"></ol>
 
-        <a href="./index.html"><button>Back</button></a>
-        <button id="clear">Clear Scores</button>
-
+      <a href="index.html"><button>Go Back</button></a>
+      <button id="clear">Clear Highscores</button>
     </div>
-    <script src="./js/results.js"></script>
-</body>
+
+    <script src="./js/scores.js"></script>
+  </body>
 </html>
