--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Coding Quiz</title>
-
+    <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
+  
+  <header>
+    <div></div>
+  </header>
 
   <body>
     
@@ -48,4 +52,9 @@
     <script src="./js/questions.js"></script>
     <script src="./js/logic.js"></script>
   </body>
+
+  <footer>
+
+  </footer>
+
 </html>
