--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <footer>
         <div id="grid3">
           <div id="footercontainer">
-
+            <img src="./media/rock-eeaao.png" alt="rock" width="150" height="125">
           </div>
         </div>
       </footer>
